# GVinHs

./: GVinHs.cabal  stack.yaml
src/Language/: ClosedGV.hs  GV.hs  GVX.hs  LLC.hs  LLCSimple.hs  PolGV.hs  ST.hs
src/Language/ClosedGV/: Pol.hs
src/Language/GV/: CPS.hs  Pol.hs
src/Language/LLC/: Monadic.hs  Plain.hs
src/Language/PolGV/: CPS.hs
