cabal-version:      3.0
name:               GVinHs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-unticked-promoted-constructors

library
    import:           warnings
    exposed-modules:
      Eq
      GVXexamples
      GVexamples
      LLCexamples
      Language.ClosedGV
      Language.ClosedGV.Pol
      Language.GV
      Language.GV.CPS
      Language.GV.IO
      Language.GV.Pol
      Language.GVX
      Language.LLC
      Language.LLC.Monadic
      Language.LLC.Plain
      Language.LLCSimple
      Language.PolGV
      Language.PolGV.CPS
      Language.ST
      PolGVexamples


    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
